--- a/index2.html
+++ b/index2.html
@@ -481,7 +481,7 @@
                     <div class="materials-grid">
                         <div class="material-card">
                            <div style="min-height: 150px;">
-                            <img src="bidon de agua.png" alt="Bidon de agua" style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
+                            <img src="img/bidon de agua.png" alt="Bidon de agua" style="width: 100%; height: 150px; object-fit: cover; border-radius: 10px;">
                            </div>
                             <h4>Bidon de Agua</h4>
                             <p>Bidon de Agua reciclado de 6L.</p>
