--- a/index2.html
+++ b/index2.html
@@ -443,9 +443,9 @@
             </div>
 
             <div class="photo-placeholder">
-                <div class="photo-icon">📸</div>
-                <p>Imagen principal del proyecto terminado<br>¡Muestra aquí el resultado final!</p>
-            </div>
+                        <div style="min-height: 300px; margin-bottom: 15px;">
+                            <img src="img/imagendeprueba.png" alt="Paso 5" style="width: 100%; height: 300px; object-fit: cover; border-radius: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.15);">
+                        </div>
         </div>
 
         <!-- Progress Tracker -->
